Made some description updates

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,16 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./Assets/styles.css">
-    <title>Student Bio</title>
+    <title>About | Alison Paia</title>
   </head>
 
   <body>
     <!-- Site Header -->
     <header>
       <!--The h1 tag should be used for the most important heading-->
-      <h1>Student Bio</h1>
+      <h1>About Me</h1>
       <ul>
-        <li><a href="#bio">Bio</a></li>
+        <li><a href="#bio">Biography</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <section id="bio" class="section"></section>
@@ -34,7 +34,7 @@
       <!-- Unordered list -->
       <ul>
         <li id="email"><strong>Email:</strong> <a href="mailto:alison.paia12@gmail.com">alison.paia12@gmail.com</a></li>
-        <li id="github"><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li id="github"><strong>Github:</strong> <a href="#">https://github.com/AliPaia</a></li>
         <li id="portfolio"><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
     </section>
