updated filing convention to deploy github page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section>
       <h2>Alison Paia</h2>
       <!-- Image -->
-      <img height="350" src="/Develop/Assets/IMG_7271.jpg" alt="Profile Picture"/>
+      <img height="350" src="./assets/IMG_7271.jpg" alt="Profile Picture"/>
       <!-- Paragraph with embedded link -->
       <p>I like to build systems and structures that help provide the framework for succinct workflows. To most who don't know me, I seem overly meticiculous and organized, but ultimately those are just the tools that buy me freedom to carve out time and space where I can explore and be creative. In my downtime, I love running around with my pups, and spending time with family and friends. My favorite activities include drawing, writing, yoga, hula dancing, wakeboarding, and MMA. I found coding as a way to expand my professional skillset in building better and customized work platforms, as well as meeting my personal goals of making some of my creative dreams come to life.  </p>
     </section>
